changes on html css js readme and images files

--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
       <div class="wrapper">
           <nav>
               <ul class="top-nav">
-                  <li><img src="images/icons/fb-icon.svg"  alt="fb-icon"></li>
-                  <li><img src="images/icons/twitter-icon.svg"  alt="twitter-icon"></li>
+                  <li><a href="https://web.facebook.com/lordlugard.agu"><img src="images/icons/fb-icon.svg"  alt="fb-icon"></a></li>
+                  <li><a href="https://twitter.com/Dsn3kings"><img src="images/icons/twitter-icon.svg"  alt="twitter-icon"></a></li>
                   <li>English</li>
                   <li>My Page</li>
                   <li>Logout</li>
@@ -86,35 +86,35 @@
   </div>
   <div id="about-members">
     <h3>Team members</h3>
-    <p class="about-members-description">Take a look at some of the 3ple Tech academy software Developers and instrctors</p>
+    <p class="about-members-description">Take a look at some of the 3ple Tech academy software Developers and instructors</p>
     <ul>
       <li><img src="images/grapy-picture1.png" class="about-pic" alt="illustrative-pic"></li>
       <li><img src="images/grapy-picture2.png" class="about-pic" alt="illustrative-pic"></li>
     </ul>
   </div>
 
-  <div id="partners">
-    <div class="wrapper-partners">
+  <div id="about-partners">
+    <div class="about-wrapper-partners">
      <h2>Partners</h2>
      <hr>
     </div>
-    <div class="partners-icons">
-      <div class="p-icons">
+    <div class="about-partners-icons">
+      <div class="about-p-icons">
         <img src="./images/mozilla.png" class="partners-img" alt="mozilla">
         <img src="./images/googlekorea.png" class="partners-img" alt="google">
         <img src="./images/naver.png" class="partners-img" alt="naver">
       </div>
-      <div class="p-icons">
+      <div class="about-p-icons">
         <img src="./images/kakao-2.png" class="partners-img" alt="kakao">
         <img src="./images/airbnb-2.png" class="partners-img" alt="airbnb">
       </div>
     </div>
   </div>
 
-  <footer>
-    <div class="footer-wrapper">
-      <div class="footer-logo">
-        <img src="images/mylogo.png" alt="">
+  <footer id="about-footer">
+    <div class="about-footer-wrapper">
+      <div class=" about-footer-logo">
+        <img src="images/mylogo.png" class="about-mylogo" alt="mylogo">
         <p class="about-footer-desc">3ple Tech <br>Academy<br>Enugu, Biafra.</p>
       </div>
       <div>
