--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class="wrapper">
                 <nav class="top-nav">
                     <ul class="top-nav-ul">
-                        <li><img src="images/icons/fb-icon.svg"   alt="fb-icon"></li>
-                        <li><img src="images/icons/twitter-icon.svg"  alt="twitter-icon"></li>
+                        <li><a href="https://web.facebook.com/lordlugard.agu"><img src="images/icons/fb-icon.svg"   alt="fb-icon"></a></li>
+                        <li><a href="https://twitter.com/Dsn3kings"><img src="images/icons/twitter-icon.svg"  alt="twitter-icon"></a></li>
                         <li>English</li>
                         <li>My Page</li>
                         <li>Logout</li>
@@ -131,6 +131,45 @@
         </section>
 
     </main>
+
+    <section id="testimonials">
+        <div class="testimonial-title">
+          <h2 class="testimonial-header">Testimonials</h2>
+          <hr>
+        </div>  
+        <div class="testimonial-container">
+        </div>
+    </section> 
+
+    <div id="about-partners">
+        <div class="about-wrapper-partners">
+         <h2>Partners</h2>
+         <hr>
+        </div>
+        <div class="about-partners-icons">
+          <div class="about-p-icons">
+            <img src="./images/mozilla.png" class="partners-img" alt="mozilla">
+            <img src="./images/googlekorea.png" class="partners-img" alt="google">
+            <img src="./images/naver.png" class="partners-img" alt="naver">
+          </div>
+          <div class="about-p-icons">
+            <img src="./images/kakao-2.png" class="partners-img" alt="kakao">
+            <img src="./images/airbnb-2.png" class="partners-img" alt="airbnb">
+          </div>
+        </div>
+      </div>
+    
+      <footer id="footer">
+        <div class="footer-wrapper">
+          <div class="footer-logo">
+            <img src="images/mylogo.png" alt="">
+            <p class="footer-desc">3ple Tech <br>Academy<br>Enugu, Biafra.</p>
+          </div>
+          <div>
+            <p class="footer-desc">Innovative Tech<br>&copy2022 <span>Lugard Agu</span></p> 
+          </div>
+        </div>
+      </footer>
        
   <script src="index.js"></script>
   <script src="about.js"></script>
