made changes to about index.html readme style.css

--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
     <h3>Team members</h3>
     <p class="about-members-description">Take a look at some of the 3ple Tech academy software Developers and instructors</p>
     <ul>
-      <li><img src="images/grapy-picture1.png" class="about-pic" alt="illustrative-pic"></li>
-      <li><img src="images/grapy-picture2.png" class="about-pic" alt="illustrative-pic"></li>
+      <li><img src="images/about_2013.png" class="about-pic" alt="illustrative-pic"></li>
+      <li><img src="images/about_2011.png" class="about-pic" alt="illustrative-pic"></li>
     </ul>
   </div>
 
