--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     </div>
                     <ul class="bottom-nav">
                         <li><a  class="active" href="about.html">About</a>
-                        <li><a href="#Sales">Sales</a></li>
-                        <li><a href="#Partners">Partners</a></li>
-                        <li><a href="#Testimonials">Testimonials</a></li>
+                        <li><a href="#program">Services</a></li>
+                        <li><a href="#partners">Partners</a></li>
+                        <li><a href="#testimonials">Testimonials</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><button type="button">Follow US</button></li>
                     </ul>
