commit changes to about.html

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
               </div>
               <ul class="bottom-nav">
                   <li><a  class="active" href="about.html">About</a>
-                  <li><a href="#Sales">Sales</a></li>
+                  <li><a href="#Sales">Services</a></li>
                   <li><a href="#Partners">Partners</a></li>
                   <li><a href="#Testimonials">Testimonials</a></li>
                   <li><a href="#">Blog</a></li>
