updates on about.html index.html style.css, Readme

--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
               </div>
               <ul class="bottom-nav">
                   <li><a  class="active" href="about.html">About</a>
-                  <li><a href="#Sales">Services</a></li>
-                  <li><a href="#Partners">Partners</a></li>
+                  <li><a href="#program">Services</a></li>
+                  <li><a href="#about-partners">Partners</a></li>
                   <li><a href="#Testimonials">Testimonials</a></li>
                   <li><a href="#">Blog</a></li>
                   <li><button type="button">Follow US</button></li>
@@ -52,7 +52,7 @@
           <li><a href="about.html">About</a>
           <li><a href="#program">Services</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#partners">Partners</a></li>
+          <li><a href="#about-partners">Partners</a></li>
           <li><a href="#">Blog</a></li>
       </ul>    
   </div>
