--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <ul class="bottom-nav">
                         <li><a  class="active" href="about.html">About</a>
                         <li><a href="#program">Services</a></li>
-                        <li><a href="#partners">Partners</a></li>
+                        <li><a href="#about-partners">Partners</a></li>
                         <li><a href="#testimonials">Testimonials</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><button type="button">Follow US</button></li>
@@ -52,7 +52,7 @@
                 <li><a href="about.html">About</a>
                 <li><a href="#program">Services</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#partners">Partners</a></li>
+                <li><a href="#about-partners">Partners</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>    
         </div>
@@ -142,34 +142,34 @@
     </section> 
 
     <div id="about-partners">
-        <div class="about-wrapper-partners">
-         <h2>Partners</h2>
-         <hr>
+      <div class="about-wrapper-partners">
+        <h2>Partners</h2>
+        <hr>
+      </div>
+      <div class="about-partners-icons">
+        <div class="about-p-icons">
+          <img src="./images/mozilla.png" class="partners-img" alt="mozilla">
+          <img src="./images/googlekorea.png" class="partners-img" alt="google">
+          <img src="./images/naver.png" class="partners-img" alt="naver">
         </div>
-        <div class="about-partners-icons">
-          <div class="about-p-icons">
-            <img src="./images/mozilla.png" class="partners-img" alt="mozilla">
-            <img src="./images/googlekorea.png" class="partners-img" alt="google">
-            <img src="./images/naver.png" class="partners-img" alt="naver">
-          </div>
-          <div class="about-p-icons">
-            <img src="./images/kakao-2.png" class="partners-img" alt="kakao">
-            <img src="./images/airbnb-2.png" class="partners-img" alt="airbnb">
-          </div>
+        <div class="about-p-icons">
+          <img src="./images/kakao-2.png" class="partners-img" alt="kakao">
+          <img src="./images/airbnb-2.png" class="partners-img" alt="airbnb">
         </div>
       </div>
+    </div>
     
-      <footer id="footer">
-        <div class="footer-wrapper">
-          <div class="footer-logo">
-            <img src="images/mylogo.png" alt="">
-            <p class="footer-desc">3ple Tech <br>Academy<br>Enugu, Biafra.</p>
-          </div>
-          <div>
-            <p class="footer-desc">Innovative Tech<br>&copy2022 <span>Lugard Agu</span></p> 
-          </div>
+    <footer id="footer">
+      <div class="footer-wrapper">
+        <div class="footer-logo">
+          <img src="images/mylogo.png" alt="">
+          <p class="footer-desc">3ple Tech <br>Academy<br>Enugu, Biafra.</p>
         </div>
-      </footer>
+        <div>
+         <p class="footer-desc">Innovative Tech<br>&copy2022 <span>Lugard Agu</span></p> 
+        </div>
+      </div>
+    </footer>
        
   <script src="index.js"></script>
   <script src="about.js"></script>
