updated about.html file

--- a/about.html
+++ b/about.html
@@ -57,59 +57,61 @@
       </ul>    
   </div>
   </header>
-   
-  <div id="about-container1">
-    <p class="about-description">This is Lugard's Tech Development Academy '3ple Tech'</p>
-    <hr class="about-description-hr">
-    <h1 class="about-header">AT 3PLE TECH OUR DEDICATION IS BASED ON BEST PRACTICES AND CLIENTS SATISFACTION.</h1>
-    <div id="about-theme">
-      <p class="about-theme">
-        3ple Tech is service delivery and learning based academy, with a very 
-        vast network of resource persons and professional developers. Our team comprises of dedicated
-        workers and effective code developers. Our objective is to bridge knowledge-based gap of the tech 
-       industry especially from the African perspective.
-      </p>
-    </div>
-    <p class="about-contact">
-      Please contact us via email or phone call for further enquiry to 3ple Tech 
-      and service delivery.
-    </p>
-    <p class="about-contact-mail">agulugard@gmail.com</p>
-    <hr class="about-contact-hr">
-  </div>  
-  
-  <div class="about-logo">
-    <div class="about-logo2">
-      <img src="./images/mylogo.png" class="about-mylogo" alt="mylogo">
-      <p class="academy-description">3ple Tech academy<br>October 2022<br>Enugu, Biafra.</p>
-    </div>
-  </div>
-  <div id="about-members">
-    <h3>Team members</h3>
-    <p class="about-members-description">Take a look at some of the 3ple Tech academy software Developers and instructors</p>
-    <ul>
-      <li><img src="images/about_2013.png" class="about-pic" alt="illustrative-pic"></li>
-      <li><img src="images/about_2011.png" class="about-pic" alt="illustrative-pic"></li>
-    </ul>
-  </div>
 
-  <div id="about-partners">
-    <div class="about-wrapper-partners">
-     <h2>Partners</h2>
-     <hr>
-    </div>
-    <div class="about-partners-icons">
-      <div class="about-p-icons">
-        <img src="./images/mozilla.png" class="partners-img" alt="mozilla">
-        <img src="./images/googlekorea.png" class="partners-img" alt="google">
-        <img src="./images/naver.png" class="partners-img" alt="naver">
+  <main> 
+    <section id="about-container1">
+      <p class="about-description">This is Lugard's Tech Development Academy '3ple Tech'</p>
+      <hr class="about-description-hr">
+      <h1 class="about-header">AT 3PLE TECH OUR DEDICATION IS BASED ON BEST PRACTICES AND CLIENTS SATISFACTION.</h1>
+      <div id="about-theme">
+        <p class="about-theme">
+          3ple Tech is service delivery and learning based academy, with a very 
+          vast network of resource persons and professional developers. Our team comprises of dedicated
+          workers and effective code developers. Our objective is to bridge knowledge-based gap of the tech 
+         industry especially from the African perspective.
+        </p>
       </div>
-      <div class="about-p-icons">
-        <img src="./images/kakao-2.png" class="partners-img" alt="kakao">
-        <img src="./images/airbnb-2.png" class="partners-img" alt="airbnb">
+      <p class="about-contact">
+        Please contact us via email or phone call for further enquiry to 3ple Tech 
+        and service delivery.
+      </p>
+      <p class="about-contact-mail">agulugard@gmail.com</p>
+      <hr class="about-contact-hr">
+    </section>  
+  
+    <div class="about-logo">
+      <div class="about-logo2">
+        <img src="./images/mylogo.png" class="about-mylogo" alt="mylogo">
+        <p class="academy-description">3ple Tech academy<br>October 2022<br>Enugu, Biafra.</p>
       </div>
     </div>
-  </div>
+    <div id="about-members">
+      <h2>Team members</h2>
+      <p class="about-members-description">Take a look at some of the 3ple Tech academy software Developers and instructors</p>
+      <ul>
+        <li><img src="images/about_2013.png" class="about-pic" alt="illustrative-pic"></li>
+        <li><img src="images/about_2011.png" class="about-pic" alt="illustrative-pic"></li>
+      </ul>
+    </div>
+
+    <section id="about-partners">
+      <div class="about-wrapper-partners">
+       <h3>Partners</h3>
+       <hr>
+      </div>
+      <div class="about-partners-icons">
+        <div class="about-p-icons">
+          <img src="./images/mozilla.png" class="partners-img" alt="mozilla">
+          <img src="./images/googlekorea.png" class="partners-img" alt="google">
+          <img src="./images/naver.png" class="partners-img" alt="naver">
+        </div>
+        <div class="about-p-icons">
+          <img src="./images/kakao-2.png" class="partners-img" alt="kakao">
+          <img src="./images/airbnb-2.png" class="partners-img" alt="airbnb">
+        </div>
+      </div>
+    </section>
+  </main>
 
   <footer id="about-footer">
     <div class="about-footer-wrapper">
