updates to about, index.html index.js readme css

--- a/about.html
+++ b/about.html
@@ -11,51 +11,51 @@
   <header id="header">
     <div class="header-top">
       <div class="wrapper">
-          <nav>
-              <ul class="top-nav">
-                  <li><a href="https://web.facebook.com/lordlugard.agu"><img src="images/icons/fb-icon.svg"  alt="fb-icon"></a></li>
-                  <li><a href="https://twitter.com/Dsn3kings"><img src="images/icons/twitter-icon.svg"  alt="twitter-icon"></a></li>
-                  <li>English</li>
-                  <li>My Page</li>
-                  <li>Logout</li>
-              </ul>
-          </nav>
+        <nav>
+          <ul class="top-nav">
+            <li><a href="https://web.facebook.com/lordlugard.agu"><img src="images/icons/fb-icon.svg"  alt="fb-icon"></a></li>
+            <li><a href="https://twitter.com/Dsn3kings"><img src="images/icons/twitter-icon.svg"  alt="twitter-icon"></a></li>
+            <li>English</li>
+            <li>My Page</li>
+            <li>Logout</li>
+          </ul>
+        </nav>
       </div>
-  </div>
+    </div>
 
-  <div class="header-main">
+    <div class="header-main">
       <div class="wrapper">
-          <nav class="main-nav">
-              <div class="icon-nav">
-                  <a href="index.html"><img src="./images/mylogo.png" alt="logo image"></a>
-              </div>
-              <div class="icon-menu-mobile">
-                  <img src="images/icons/hamburger-icon.svg" alt="Hamburger icon">
-              </div>
-              <ul class="bottom-nav">
-                  <li><a  class="active" href="about.html">About</a>
+        <nav class="main-nav">
+          <div class="icon-nav">
+            <a href="index.html"><img src="./images/mylogo.png" alt="logo image"></a>
+          </div>
+          <div class="icon-menu-mobile">
+            <img src="images/icons/hamburger-icon.svg" alt="Hamburger icon">
+          </div>
+          <ul class="bottom-nav">
+                  <li><a  class="active" href="index.html">Home</a>
                   <li><a href="#program">Services</a></li>
                   <li><a href="#about-partners">Partners</a></li>
                   <li><a href="#Testimonials">Testimonials</a></li>
                   <li><a href="#">Blog</a></li>
                   <li><button type="button">Follow US</button></li>
-              </ul>
-          </nav>
+          </ul>
+        </nav>
       </div>
-  </div>
+    </div>
 
-  <div class="nav-mobile">
+    <div class="nav-mobile">
       <div class="cross">
           <img src="images/icons/cross.svg" alt="cross">
       </div>
       <ul class="container">
-          <li><a href="about.html">About</a>
+          <li><a href="index.html">Home Page</a>
           <li><a href="#program">Services</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
           <li><a href="#about-partners">Partners</a></li>
           <li><a href="#">Blog</a></li>
       </ul>    
-  </div>
+    </div>
   </header>
 
   <main> 
@@ -68,7 +68,7 @@
           3ple Tech is service delivery and learning based academy, with a very 
           vast network of resource persons and professional developers. Our team comprises of dedicated
           workers and effective code developers. Our objective is to bridge knowledge-based gap of the tech 
-         industry especially from the African perspective.
+          industry especially from the African perspective.
         </p>
       </div>
       <p class="about-contact">
@@ -79,20 +79,21 @@
       <hr class="about-contact-hr">
     </section>  
   
-    <div class="about-logo">
+    <section class="about-logo">
       <div class="about-logo2">
         <img src="./images/mylogo.png" class="about-mylogo" alt="mylogo">
         <p class="academy-description">3ple Tech academy<br>October 2022<br>Enugu, Biafra.</p>
       </div>
-    </div>
-    <div id="about-members">
-      <h2>Team members</h2>
+    </section>
+    
+    <section id="about-members">
+      <h3>Team members</h3>
       <p class="about-members-description">Take a look at some of the 3ple Tech academy software Developers and instructors</p>
-      <ul>
+      <ul class="about-pic-ul">
         <li><img src="images/about_2013.png" class="about-pic" alt="illustrative-pic"></li>
         <li><img src="images/about_2011.png" class="about-pic" alt="illustrative-pic"></li>
       </ul>
-    </div>
+    </section>
 
     <section id="about-partners">
       <div class="about-wrapper-partners">
