--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
           <h2 class="testimonial-header">Testimonials</h2>
           <hr>
         </div>  
-        <div class="testimonial-container">
-        </div>
+        <section class="testimonial-container">
+        </section>
     </section> 
 
-    <div id="about-partners">
+    <section id="about-partners">
       <div class="about-wrapper-partners">
         <h2>Partners</h2>
         <hr>
@@ -157,19 +157,19 @@
           <img src="./images/airbnb-2.png" class="partners-img" alt="airbnb">
         </div>
       </div>
-    </div>
+    </section>
     
-    <footer id="footer">
-      <div class="footer-wrapper">
-        <div class="footer-logo">
-          <img src="images/mylogo.png" alt="">
-          <p class="footer-desc">3ple Tech <br>Academy<br>Enugu, Biafra.</p>
+    <footer id="about-footer">
+        <div class="about-footer-wrapper">
+          <div class=" about-footer-logo">
+            <img src="images/mylogo.png" class="about-mylogo" alt="mylogo">
+            <p class="about-footer-desc">3ple Tech <br>Academy<br>Enugu, Biafra.</p>
+          </div>
+          <div>
+            <p class="about-footer-desc">Innovative Tech<br>&copy2022 <span>Lugard Agu</span></p> 
+          </div>
         </div>
-        <div>
-         <p class="footer-desc">Innovative Tech<br>&copy2022 <span>Lugard Agu</span></p> 
-        </div>
-      </div>
-    </footer>
+      </footer>
        
   <script src="index.js"></script>
   <script src="about.js"></script>
